--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 </head>
 <body>
     <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida --- nytt test -->
+    <div class="gridwrapper">
+        <header class="header"><h5>header</h5></header>
+        <nav class="nav"><h5>nav</h5></nav>
+        <article class="article1"><h5>article</h5></article>
+        <article class="article2"><h5>article</h5></article>
+        <article class="article3"><h5>article</h5></article>
+        <article class="article4"><h5>article</h5></article>
+        <article class="article5"><h5>article</h5></article>
+        <article class="article6"><h5>article</h5></article>
+        <article class="article7"><h5>article</h5></article>
+        <article class="article8"><h5>article</h5></article>
+        <section class="innergridwrapper"><h5>4 divs</h5></section>
+        <footer class="footer"><h5>footer</h5></footer>
+        <aside class="aside"><h5>aside</h5></aside>
+    
+    </div>
+
 
 <script src="js/script.js"></script>
 </body>
